styles.css
@font-face {
    font-family: roboto-bold;
    src: url(fonts/roboto-bold-webfont.woff2);
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    
}

html, body {
    height: 100%;
}

body {
    margin: 0;
    /*background-color: #94a3b8; */
    background-color: rgba(226,232,240,255);
    font-family: roboto-bold, sans-serif;
    font-size: 24px;
}

.container {
    display: grid;
    grid-template-columns: 1fr 5fr;
    grid-template-rows: 1fr 4fr;
    height: 100vh;
    width: 100vw;
    overflow-x: hidden;
    overflow-y: hidden;
}

.sidebar {
    background-color: rgba(25,146,212,255);
    padding: 15px 20px 15px 20px;
    display: flex;
    flex-direction: column;
    grid-column: 1 / 2;
    grid-row: 1 / 3;
}

.header {
    background-color: ghostwhite;
    padding: 15px 20px 15px 20px;
    box-shadow: -2px 3px 3px -3px black;
    display: flex;
    flex-direction: column;
    grid-column: 2 / 3;
    grid-row: 1 / 2;
    
}

.header-top {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.header-top img {
    width: 75px;
    height: 75px;
    filter: invert(82%) sepia(10%) saturate(321%) hue-rotate(179deg) brightness(78%) contrast(90%);
}

.top-start {
    display: flex;
    align-items: center;
}

.top-start img {
    width: 150px;
    height: 150px;
    filter: invert(82%) sepia(10%) saturate(321%) hue-rotate(179deg) brightness(78%) contrast(90%);
}

.header-top p {
    color: black;
}

.header-bottom {
    display: flex;
    flex-direction: column;
    gap: 20px;
    margin-bottom: 5px;
}

.bottom-start {
    display: flex; 
    align-items: center;
}

.bottom-start img {
    width: 60px;
    height: 60px;
    filter: invert(82%) sepia(10%) saturate(321%) hue-rotate(179deg) brightness(78%) contrast(90%);
}

input {
    background-color: rgba(226,232,240,255);
    border: none;
    border-radius: 10px;
    padding: 15px;
    font-size: 18px;
    font-weight: bold;
    height: 35px;
    flex: 1;
    letter-spacing: 0.5px;
}

.bottom-end {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 100px;
}


.bottom-end button {
    width: 150px;
    height: 45px;
    border: none;
    border-radius: 30px;
    background-color: rgba(25,146,212,255);
    color: ghostwhite;
    font-size: 24px;
    font-weight: bold;
}

.maincontainer {
    display: flex;
    gap: 210px;
    margin-bottom: 0;
    padding: 15px 20px 15px 20px;
    overflow-y: auto;
    overflow-x: hidden;
    
}

.main {
    display: grid;
    grid-template-rows: 50px 2fr 2fr 2fr;
    grid-template-columns: 1fr 1fr;
    width: 70%;
    gap: 25px;
}

.dashboard {
    display: flex;
    align-items: center;
    height: 50px;
    gap: 10px;
    margin: 10px 0px 30px 0px;
}

.dashboard p {
    margin: 0;
    color: #f8fafc;
    font-size: 36px;
}

.dashboard img {
    width: 70px;
    height: 70px;
    filter: invert(100%) sepia(20%) saturate(797%) hue-rotate(176deg) brightness(100%) contrast(98%);
}

nav {
    margin-left: 5px;
}

ul {
    display: flex;
    flex-direction: column;
    gap: 50px;
}


.sidebar-top {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.sidebar-bottom {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.sidebar-top div {
    display: flex;
    align-items: center;
    gap: 10px;
}

.sidebar-bottom div {
    display: flex;
    align-items: center;
    gap: 10px;
}

ul div img {
    width: 40px;
    height: 40px;
    filter: invert(100%) sepia(20%) saturate(797%) hue-rotate(176deg) brightness(100%) contrast(98%);
}


ul {
    margin: 0;
    padding: 0;
    list-style: none;
    color: ghostwhite;
}


.main-text {
    grid-column: 1 / 3;
    display: flex;
    
    justify-content: space-between;
}

.main-text p {
    margin: 0;
}

.side-main {
    display: flex;
    flex-direction: column;
    width: 30%;
    gap: 15px;
}

.announcement-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.announcement-container p {
    margin-bottom: 15px;
}





.card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
    padding: 10px 15px 10px 15px;
    width: 100%;
    height: 200px;
    background-color: ghostwhite;
    border-left: 12px solid;
    border-left-color: #f59e0b;
    border-radius: 5px;
    box-shadow: 1px 1px 3px 1px grey;
}

.card-content p:first-child {
    margin: 0;
    font-size: 24px;
    
}

.card-content p:nth-child(2) {
    margin: 0;
    font-size: 16px;
    color: grey;
    font-weight: normal;
}

.card-imgs {
    display: flex;
    justify-content: flex-end;
    gap: 25px;
}

.card-imgs img {
    width: 30px;
    height: 30px;
}

.announcements {
    background-color: ghostwhite;
    border-radius: 5px;
    box-shadow: 1px 1px 3px 1px grey;
    padding: 10px 15px 10px 15px;
    box-sizing: border-box;
}

.announcement-text {
    border-bottom: 1px solid grey;
}

.announcement-text p:first-child {
    margin-top: 10px;
    font-size: 18px;
}

.announcement-text p:nth-child(2) {
    margin-bottom: 10px;
    font-size: 16px;
    color: grey;
    font-weight: normal;
}

#removeborder {
    border: none;
}

.trending-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 1;
}

.trending-container p {
    margin-bottom: 15px;
}

.trending {
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: ghostwhite;
    border-radius: 5px;
    box-shadow: 1px 1px 3px 1px grey;
    padding: 10px 15px 10px 15px;
    box-sizing: border-box;
    width: 250px;
    height: 250px;
    gap: 10px;
}

.trending-content {
    display: flex;
    align-items: center;
    gap: 10px;
}

.trending-text {
    display: flex;
    flex-direction: column;
}

.trending-content p {
    font-size: 14px;
    margin: 0;
}

.trending-content img {
    width: 50px;
    height: 50px;
}

@media screen and (max-width: 1321px) {
    .maincontainer {
        flex-direction: column;
        align-items: center;
        gap: 50px;
        width: 100%;
    }

    .main-text {
        justify-content: center;
    }

    .main {
        width: 90%;
    }

    .side-main {
        flex-direction: row;
        width: 90%;
    }

}

@media screen and (max-width: 990px) {
    .container {
        display: grid;
        grid-template-columns: 1fr 5fr;
        grid-template-rows: 1fr .5fr 4fr;
        height: 100vh;
        width: 100vw;
        overflow-y: scroll;
    }

    .header {
        grid-row: 1 / 2;
        grid-column: 1 / 3;
    }

    .sidebar {
        grid-row: 2 / 3;
        grid-column: 1 / 3;
        align-items: center;
        flex-wrap: nowrap;
        height: 100px;
        overflow: hidden;
    }

    .sidebar-top {
        justify-content: center;
        flex: 1;
    }

    .sidebar-bottom {
        justify-content: center;
        flex: 1;
    }

    #sidebar-drop {
        height: 675px;
        transition: height 0.5s;
    }
    
    [data='sidebar-lift'] {
        height: 100px;
        transition: height 0.5s;
    }

    .maincontainer {
        grid-row: 3 / 4;
        grid-column: 1 / 3;
        overflow-x: visible;
        overflow-y: visible;
    }
}

@media screen and (max-width: 624px) {
    .top-start img {
        width: 110px;
        height: 110px;
    }

    .top-start p {
        font-size: 18px;
    }

    .bottom-end {
        flex-direction: column;
        gap: 20px;
    }

    .bottom-end button {
        width: 50%;
    }

    .main {
        display: flex;
        flex-direction: column;
    }

    .side-main {
        flex-direction: column;
    }


}

